# opConvolution

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac  opConvolution.sln
src/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  StopWatch.cxx  StopWatch.h  itkStopWatch.cxx  itkStopWatch.h  main.cpp  opConvolution.cproj  opConvolutionFilter.cpp  opConvolutionFilter.h  statistics.h  test.cfg  timer.h  util.h
